<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Respuesta"
        android:layout_width="329dp"
        android:layout_height="70dp"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp" />

    <EditText
        android:id="@+id/numero1"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="Escribe un numero"
        android:inputType="number"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="142dp" />

    <EditText
        android:id="@+id/numero2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="Escribe un numero"
        android:inputType="number"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="287dp" />

    <Button
        android:id="@+id/button_multiplicacion"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="x"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="627dp" />

    <Button
        android:id="@+id/button_resta"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="-"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="449dp" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="÷"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="611dp" />

    <Button
        android:id="@+id/button_suma"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="+"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="447dp" />

    <Button
        android:id="@+id/button_potenciacion"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="^" />

    <Button
        android:id="@+id/button_fibonacci"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:text="fibonacci " />

    <Button
        android:id="@+id/button_factorizacion"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="factorizacion" />

</LinearLayout>