<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/Text_Respuesta"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/numero3"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="Escribe un numero"
        android:inputType="number" />

    <Button
        android:id="@+id/button_factorizacion2"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:text="factorizacion" />

    <Button
        android:id="@+id/button_atras"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="Atras" />

</LinearLayout>